--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Magnus Danielsen Portfolio</title>
+  <link rel="stylesheet" href="/css/headerfooterblog.css">
   <link rel="stylesheet" href="/css/list.css">
   <link rel="stylesheet" href="/css/main.css">
   <script src="/js/script.js"></script>
@@ -46,7 +47,7 @@
 
   <div class="topnav" id="myTopnav">
     <button class="topnav-button1"><a href="/index.html/">Forside</button></a>
-    <button class="topnav-button2"><a href="/posts/">Blog</button></a>
+    <button class="topnav-button2 btn-active"><a href="/posts/">Blog</button></a>
     <button class="topnav-button3"><a href="/projekter.html/">Projekter</button></a>
     <button class="topnav-button4"><a href="/om-mig.html/">Om Mig</button></a>
   </div>
