--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Magnus Danielsen Portfolio</title>
+  <link rel="stylesheet" href="/css/headerfooterblog.css">
   <link rel="stylesheet" href="/css/list.css">
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/bootstrap.min.css/">
