--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -25,6 +25,10 @@
 <body>
 
 
+<div class="overflow-wrapper">
+
+<div class="wrapper">
+
 
 <video loop autoplay muted id="topnav-background">
   <source type="video/mp4" src="/images/topnav-background.mp4"></source>
@@ -50,11 +54,12 @@
   <i class="fa fa-bars fa-2x"></i></a>
 </div>
     
+<center><img class="portfolio-logo" src="images/portfolio-logo.png"></center>
 
+<div class="push"></div>
  
 
-
-<center><img class="portfolio-logo" src="images/portfolio-logo.png"></center>
+</div>
 
 <div class="footer">
 
@@ -70,6 +75,7 @@
 
 </div>
 
+</div>
 
 </body>
 </html>
