--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,5 @@
+* { box-sizing: border-box; }
+
 body {
   min-height: 100vh;
   margin: 0;
@@ -35,19 +37,15 @@ body {
 
 @media screen and (max-width: 1300px) {
 .portfolio-logo {
-  width: 70%;
-  height: 50vh;
-  margin-top: 15vh;
+  width: 80%;
+  height: 40vw;
+  margin-top: 20%;
   }
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
+.wrapper {
+  margin-bottom: 500px;
 }
-
-
-
 
 
 
