--- a/static/css/headerfooterblog.css
+++ b/static/css/headerfooterblog.css
@@ -1,3 +1,13 @@
+* { box-sizing: border-box; }
+
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: white;
+  font-family: 'Roboto';
+}
+
 /*Baggrund, logo og knapper*/
 .topnav-container {
   position: fixed;
