--- a/static/css/projekter.css
+++ b/static/css/projekter.css
@@ -1,11 +1,6 @@
-* { box-sizing: border-box; }
 
 body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: black;
-  font-family: 'Roboto';
+  background-color: rgb(73, 120, 223);
 }
 
 /*Baggrund*/
@@ -115,8 +110,8 @@ a { color: inherit; }
 }
 
 .how-to-video {
-   width: 100%;
-   height: 10vw;
+  width: 100%;
+  height: 10vw;
 }
 
 .flaske {
