--- a/static/css/headerfooterblog.css
+++ b/static/css/headerfooterblog.css
@@ -62,6 +62,14 @@ body {
   display: none;
 }
 
+@keyframes growDown {
+  0% {
+      transform: scaleY(0)
+  }
+  100% {
+      transform: scaleY(1)
+  }
+}
 
 .btn-active a:visited, .btn-active a:link {
   color:rgb(153, 46, 112);
