--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -60,12 +60,11 @@
     <i class="fa fa-bars fa-2x"></i></a>
 </div>
 
-<br>
 
-<main class="site-main">
+<main class="site-main" style="margin-top: 8vw;">
   <div class="container">
     <article class="single-post">
-      <h1 class="entry-title mt-5 mb-4">{{ .Title }}</h1>
+      <h1 class="entry-title mb-4">{{ .Title }}</h1>
       <div class="post-meta">
       <span class="post-author"> Posted by: {{ .Params.author }}</span>
       <span class="post-date">
