--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -62,7 +62,7 @@
 
 <br><br>
 
-<main class="site-main" style="margin-top: 2vw;">
+<main class="site-main">
   <div class="container">
     <section class="post-list">
       {{ range .Paginator.Pages }}
