--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -60,11 +60,12 @@
     <i class="fa fa-bars fa-2x"></i></a>
 </div>
 
+<br>
 
-<main class="site-main" style="margin-top: 10vw;">
+<main class="site-main">
   <div class="container">
     <article class="single-post">
-      <h1 class="entry-title mb-4">{{ .Title }}</h1>
+      <h1 class="entry-title mt-4 mb-4">{{ .Title }}</h1>
       <div class="post-meta">
       <span class="post-author"> Posted by: {{ .Params.author }}</span>
       <span class="post-date">
