--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,6 +19,13 @@ img {
     margin-top: 4vw;
 }
 
+@media screen and (max-width: 1300px) {
+.wrapper {
+    min-height: 100%;
+    margin-bottom: 500px;
+    overflow: hidden;
+    }
+}
 
 
 
