--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -8,6 +8,7 @@
   <title>Magnus Danielsen Portfolio</title>
   <link rel="stylesheet" href="/css/headerfooter.css">
   <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="/css/main.css">
   <script src="/js/script.js"></script>
   <script src="https://kit.fontawesome.com/5e2cb9f1be.js" crossorigin="anonymous"></script>
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
