--- a/static/css/main.css
+++ b/static/css/main.css
@@ -22,7 +22,7 @@ img {
 @media screen and (max-width: 1300px) {
 .wrapper {
     min-height: 100%;
-    margin-bottom: fit-content;
+    margin-bottom: 600px;
     overflow: hidden;
     }
 }
